[package]
name = "uror"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.8", features = ["sqlite"]}
dotenv = {version = "0.15.0"}
env_logger ={version =  "0.9.0", optional = true }
harsh = { version="0.2.2", optional = true }
hyper = { version = "0.14.19", features = ["server", "http1", "tcp"] }
log ={version =  "0.4.17"}
serde = { version = "1.0.137", features = ["derive"]}
serde_json ={version =  "1.0.81"}
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"]}
url = {version = "2.2.2"}

[features]
default = []
logger = ["default", "env_logger"]
obfs = ["default", "harsh"]
obfs2 = ["obfs", "logger"]
